syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package CompanyDescription;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";        //contains nullable wrappers

 service CompanyDescription {
   rpc Add (CompanyDescriptionProtos) returns (google.protobuf.Empty);
   rpc Get (GetCompanyDescriptionRequest) returns (CompanyDescriptionProto);
   rpc Update (CompanyDescriptionProtos) returns (google.protobuf.Empty);
   rpc Delete (CompanyDescriptionProtos) returns (google.protobuf.Empty);
 }

 message CompanyDescriptionProto {
    string Id = 1;           //Guid -> string parse tostring
    string Company = 2;
    string CompanyName = 3;
    string CompanyDescription = 4;
    string LanguageId = 5;
    bytes TimeStamp = 6;
}

 message GetCompanyDescriptionRequest {
	 string id = 1;
}

 message CompanyDescriptionProtos {
	repeated CompanyDescriptionProto proto = 1;
}
